@@ -1,4 +1,5 @@
 Verion 0.9.45dev (?? ??? 2004)
+  - Cleaning up styles.php
   - Bringing views up to date
   - Applying print-media patch. Credit to Adam Roben.
   - Fixed bug causing today link not to work when not logged in
